body-fittness and nav work done

--- a/A2-projects-ph/index.html
+++ b/A2-projects-ph/index.html
@@ -4,15 +4,306 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my 2nd projects</title>
+    <title>Body Fittness</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="./style/style.css">
+
 </head>
 
-<body>
-    <nav>
+<body class="font bg  width">
+    <header class="body-fittness">
+        <nav class="nav-work">
+            <h3 class="brand">Fitness</h3>
+            <ul class="nav-disply">
+                <li class="nav-item"><a href="" class="nav-link"><span class="workouts">Home</span></a></li>
+                <li class="nav-item"><a href="" class="nav-link">Service</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="" class="nav-link">About</a></li>
+            </ul>
+            <div class="nav-work"><i class="fa-solid fa-bars"></i></div>
+        </nav>
+        <div class="banner-contein">
+            <div class="banner-text-conteinar">
+                <h2>Get body in <br> 𝓼𝓱𝓪𝓹𝓮 & stay <br> healthy</h2>
+                <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help
+                    you get fit and stay fit!</p>
+                <div class="btn-banner">
+                    <button class="btn-1">Join Club Now !</button>
+                    <button class="btn-2">Download App</button>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="../B10A2-versatile-ui/images/Images 2.png" alt="">
+
+                <div class="banner-500">
+                    <h3>500+</h3>
+                    <p>Free Workout Videos</p>
+                </div>
+                <div class="banner-350">
+                    <div class="icon">
+                    </div>
+                    <div class="text-3">
+                        <h3>350+</h3>
+                        <p>Video tutorial</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </header>
+
+    <main>
+        <div class="habit-conteinar bg">
+            <div class="habit-text">
+                <h1>Change Your Habits</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym. </p>
+
+            </div>
+            <div class="habit-img">
+                <div class="habit-imgs">
+                    <img src="../B10A2-versatile-ui/images/image 3.png" alt="">
+                    <h6 class="habit-about">Movement</h6>
+                    <p class="habit-pra">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-imgs">
+                    <img src="../B10A2-versatile-ui/images/image 2.png" alt="">
+                    <h6 class="habit-about">Time</h6>
+                    <p class="habit-pra">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-imgs">
+                    <img src="../B10A2-versatile-ui/images/image 4.png" alt="">
+                    <h6 class="habit-about">Practice</h6>
+                    <p class="habit-pra">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-imgs">
+                    <img src="../B10A2-versatile-ui/images/image 5.png" alt="">
+                    <h6 class="habit-about">Weight Loss</h6>
+                    <p class="habit-pra">We believe fitness should be accessible to everyone</p>
+                </div>
 
 
-    </nav>
+            </div>
+        </div>
 
+        <div class="run-conteinar">
+            <div class="run-text">
+                <h2>Run an Extra <br> Mile Easily</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym. With hundreds of professional workouts.</p>
+                <button class="btn-1">Join Now</button>
+            </div>
+            <div class="run-img">
+                <img src="../B10A2-versatile-ui/images/run.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="package-conteinar">
+            <h3>Trainings and Exercises</h3>
+            <p>Pro Gym is a leading provider of complete gym packages worldwide. Browse our new and used strength
+                equipment for sale from brand names such as Life Fitness,</p>
+            <div class="package-menu">
+                <div class="menu-item">
+                    <img src="../B10A2-versatile-ui/images/exercise1.jpg" alt="">
+                    <h4>7 Days <span class="price">99$</span> <span class="discount">20% off</span> </h4>
+                    <h6>Pro Gym is a leading provider of complete gym packages worldwide</h6>
+                </div>
+                <div class="menu-item">
+                    <img src="../B10A2-versatile-ui/images/exercise5.jpg" alt="">
+                    <h4>30 Days <span class="price">499$</span> <span class="discount">50% off</span> </h4>
+                    <h6>Pro Gym is a leading provider of complete gym packages worldwide</h6>
+                </div>
+                <div class="menu-item">
+                    <img src="../B10A2-versatile-ui/images/exercise3.png" alt="">
+                    <h4>1 Years <span class="price">1099$</span> <span class="discount">30% off</span></h4>
+                    <h6>Pro Gym is a leading provider of complete gym packages worldwide</h6>
+                </div>
+
+
+            </div>
+        </div>
+
+        <div class="bmi-conteinar">
+            <div class="gim-title">
+                <h3>BMI Calculator</h3>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym.</p>
+            </div>
+            <div class="bmi-main">
+                <div class="gim-chart">
+                    <h4>BMI Calculator Chart</h4>
+                    <div class="bmi">
+                        <div class="bmi-table-container">
+                            <h2>BMI Calculator Chart</h2>
+                            <table class="bmi-table">
+                                <thead class="bmi-table-head">
+                                    <tr>
+                                        <th class="bm">BMI</th>
+                                        <th>Weight Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="bmi-table-body">
+                                    <tr>
+                                        <td>Below 18.5</td>
+                                        <td>Underweight</td>
+                                    </tr>
+                                    <tr>
+                                        <td>18.5 - 24.9</td>
+                                        <td>Healthy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25.0 - 29.9</td>
+                                        <td>Overweight</td>
+                                    </tr>
+                                    <tr>
+                                        <td>30.0 - and Above</td>
+                                        <td>Obese</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="bmi-form-conteinar">
+                            <h2>Calculate your BMI</h2>
+                            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or
+                                access to a gym. </p>
+
+
+                            <div class="bmi-form">
+
+                                <div class="height">
+                                    <input type="text" placeholder="Height/cm">
+                                </div>
+                                <div class="weight">
+                                    <input type="text" placeholder="Weight/kg">
+                                </div>
+                                <div class="age">
+                                    <input type="text" placeholder="Age">
+                                </div>
+                                <div class="sex">
+                                    <select name="" id="">
+                                        <option value="" disabled selected>Sex</option>
+                                        <option value="">Male</option>
+                                        <option value="">Female</option>
+                                        <option value="">Other</option>
+
+                                    </select>
+
+                                </div>
+                                <div class="activati">
+                                    <select name="" id="">
+                                        <option value="">Select an activity factor</option>
+                                    </select>
+                                </div>
+                                <button class="btn-1 calc-size" type="submit">Calculate</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+        <div class="our-team-contein">
+            <div class="our-team-heading">
+                <h2>Meet Our Team</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym.</p>
+            </div>
+            <div class="our-team-img">
+                <div class="team-1">
+                    <img src="../B10A2-versatile-ui/images/trainer1.png" alt="">
+                    <div class="team-text">
+                        <h6>Jerome Bell</h6>
+                        <p>Teinar</p>
+                    </div>
+                </div>
+                <div class="team-1">
+                    <img src="../B10A2-versatile-ui/images/trainer2.png" alt="">
+                    <div class="team-text">
+                        <h6>Camron-williamson</h6>
+                        <p>Teinar</p>
+                    </div>
+                </div>
+                <div class="team-1">
+                    <img src="../B10A2-versatile-ui/images/trainer3.png" alt="">
+                    <div class="team-text">
+                        <h6>Darrell Steward</h6>
+                        <p>Teinar</p>
+                    </div>
+                </div>
+                <div class="team-1">
+                    <img src="../B10A2-versatile-ui/images/trainer4.png" alt="">
+                    <div class="team-text">
+                        <h6>Dianna Russel</h6>
+                        <p>Teinar</p>
+                    </div>
+                </div>
+                <div class="team-1">
+                    <img src="../B10A2-versatile-ui/images/trainer5.png" alt="">
+                    <div class="team-text">
+                        <h6>Cody Fisher</h6>
+                        <p>Teinar</p>
+                    </div>
+                </div>
+                <div class="team-1">
+                    <img src="../B10A2-versatile-ui/images/trainer6.png" alt="">
+                    <div class="team-text">
+                        <h6>Theresa Webb</h6>
+                        <p>Teinar</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </main>
+
+    <footer class="footer-contein">
+        <div class="footer-conteinar">
+            <div class="footer-brand">
+                <h1>Fitness</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym. With hundreds of professional workouts.</p>
+            </div>
+            <div class="get-start-1">
+                <h4>Get Started</h4>
+                <ul class="get-start-1-lists">
+                    <li class="get-start-1-list">Service</li>
+                    <li class="get-start-1-list">Contact Us</li>
+                    <li class="get-start-1-list">Affiliate Program</li>
+                    <li class="get-start-1-list">About Us</li>
+                </ul>
+            </div>
+            <div class="get-start-2">
+                <h4>Get Started</h4>
+                <ul class="get-start-2-lists">
+                    <li class="get-start-2-list">Fitness</li>
+                    <li class="get-start-2-list">Platform</li>
+                    <li class="get-start-2-list">Workout Libary</li>
+                    <li class="get-start-2-list">App Design</li>
+
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-line">
+
+        </div>
+
+        <div class="copy-right">
+            All right reserved @Fitness 2024
+        </div>
+        <div class=""></div>
+
+
+    </footer>
 
 </body>
 
